# gen

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  analise-catalogo-registros.txt  compose.yml  pyproject.toml  restore_last_dump.sh  restore_last_dump_only_data.sh
ChromeExtension/: background.js  index.html  manifest.json  script.js  style.css
GenWebScrapingChromeExtension/: background.js  index.html  manifest.json  script.js
GenWebScrapingChromeExtension/popup/: index.html  script.js
docs/: tree.csv  tree.ods
dumps/: dump_2024-08-28_1724844420  dump_2024-08-29_1724922047  dump_2024-08-29_1724923841  dump_2024-08-30_1724976982  dump_2024-08-30_1724980039  dump_2024-08-30_1724980723  dump_2024-09-02_1725241023  dump_2024-09-03_1725328187  dump_2024-09-03_1725362731  dump_2024-09-04_1725410011  dump_2024-09-04_1725418061_L6RH-1X8  dump_2024-09-05_1725552378  dump_2024-09-05_1725564964  dump_2024-09-05_1725568957  dump_2024-09-06_1725588831  dump_2024-09-10_1725979551  dump_2024-09-10_1726008224  dump_2024-09-11_1726025083  dump_2024-09-12_1726127800  dump_2024-09-13_1726231230  dump_2024-09-13_1726266063  dump_2024-09-24_1727187273  dump_2024-09-25_1727242933  dump_2024-09-25_1727254263  dump_2024-10-02_1727841280
migrations/: env.py
migrations/versions/: 2d3dd24081e1_create_relevant_person_table.py  3abdf18ec162_mother_of_table.py  6c969c1cb484_create_tree_table.py  f174946860d6_create_root_nodes_table.py  fca8a45a9ecc_father_of_table.py
scripts/: dump
tests/: test_database.py  test_env_loader.py
