[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = ""
name = "gen"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
python = "^3.12"
python-dotenv = "^1.0.1"
selenium = "^4.23.1"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.taskipy.tasks]
downgrade = "alembic downgrade base"
lint = "isort . && blue . --extend-exclude data"
migrate = "alembic upgrade head"
restore = "./restore_last_dump.sh"
test = "pytest -x -v --ff --cov=gen --cov-report=html tests/"
