[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = ""
name = "gen"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.2"
flask = "^3.0.3"
flask-cors = "^4.0.1"
psycopg2-binary = "^2.9.9"
python = "^3.12"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
taskipy = "^1.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest_env]
SQLALCHEMY_DATABASE_URI = "sqlite:///database.test.sqlite3"

[tool.taskipy.tasks]
db_migrate = "alembic upgrade head"
db_rollback = "alembic downgrade base"
db_rollback_one = "alembic downgrade -1"
lint = "isort . && blue . --extend-exclude data"
restore = "./restore_last_dump.sh"
server = "flask --app gen.server run --port 5784"
server_debug = "task server --debug"
test = "pytest -x -v --cov=gen --cov-report=html tests/"
